Media lib controller
