# src/StoryBooks.Models/Scenario.cs
@@ -9,13 +9,13 @@ namespace StoryBooks.Models
         [JsonProperty(PropertyName = "id")]
         public string Id { get; set; } = Guid.NewGuid().ToString();
 
-        public string CampaignId { get; set; } = "";
+        public string CampaignId { get; set; } = string.Empty;
         public string PartitionKey => CampaignId;
         
         public DateTime CreationDate { get; set; }
         
         public DateTime ModificationDate { get; set; }
-        public string Title { get; set; }
+        public string Title { get; set; } = string.Empty;
 
         public IList<Section> Sections { get; set; } = Array.Empty<Section>();
     }
@@ -25,6 +25,6 @@ namespace StoryBooks.Models
         [JsonProperty(PropertyName = "id")]
         public string Id { get; set; } = Guid.NewGuid().ToString();
         
-        public string Markdown { get; set; }
+        public string Markdown { get; set; } = string.Empty;
     }
 }
